# Framework

./: .gitignore  .gitmodules  CMakeCache.txt  Dockerfile  README.md  backupInterface.c  compile_commands.json  config_user.json  fw_init_script.sh  intFace.c  interact  interactInterface.c  interface  mcu-fw.sh  messages.txt  p_def_gen  periph_def_gen.c  read_serial.py  save_peri.h  shell.nix  user_config.json  zz_auto_trace.c
.github/workflows/: ci.yml  code-lint.yml  commit-check.yml
Accurate_trace/: generate_tim.py  json_test.json  json_test_refined.json  test_simple.json  tim.c  tim.h  tim_inc.j2  tim_src.j2  trace.c  trace.h  trace_stm32f407.json  trace_stm32l552.json
Configs/: stm32.json  stm32_f407_config.json  stm32_f767_config.json  stm32_l552ze_q_config.json  stm32_u575zi_q_config.json  stm32f407.json  stm32f767.json  stm32l552.json  stm32u575zi.json
Covert_channel/st/: cc_stm32f407.json  cc_stm32f767.json  cc_stm32l552.json
Covert_channel/tools/: capacity.sh  heatmap.py
Generator/st/: check_and_refine.py
Generator/st/aux_files/: dma.c  main.c  main.h  uart.c
Generator/st/aux_files/stm32f4xx/: stm32f4xx_clock.c  stm32f4xx_clock.h  stm32f4xx_hal_conf.h
Generator/st/aux_files/stm32f7xx/: stm32f7xx_clock.h
Generator/st/aux_files/stm32l5xx/: main.c  secure_interface.h  stm32l5xx_it.h
Generator/st/aux_files/stm32u5xx/: stm32u5xx_hal_conf.h
Generator/st/templates/: check_and_refine.py
Generator/st/templates/dma/: dma.h  dma_gen.py  dma_inc.j2  dma_src.j2  map.py  stm32f407_dma_map.py  trace_stm32l552.json
Generator/st/templates/gadgets/: gadgets_gen.py  gadgets_inc.j2
Generator/st/templates/interrupt/: interrupt_gen.py  interrupt_inc.j2  interrupt_src.j2
Generator/st/templates/main/: main_gen.py  main_inc.j2  main_src.j2
Generator/st/templates/tim/: gadgets_inc.j2  tim_gen.py  tim_gen_new.py  tim_inc.j2  tim_inc_new.j2  tim_src.j2  tim_src_new.j2
Generator/st/templates/trace/: trace_gen.py  trace_inc.j2  trace_src.j2
Generator/st/templates/uart/: trace_stm32l552.json  uart.c  uart.h  uart_gen.py  uart_inc.j2  uart_src.j2
Generator/stm32/aux_files/: main.h
Generator/stm32/aux_files/stm32f4xx/: main.c
Generator/stm32/aux_files/stm32f7xx/: main.c
Generator/stm32/aux_files/stm32l5xx/: main.c
Generator/stm32/aux_files/stm32u5xx/: main.c
Generator/stm32/lscript/: STM32U575ZITXQ_FLASH.ld
Help-Code/: samd21_config.json  stm32_config.json  stm32_f767_config.json  stm32_l552_config.json  stm32_l552ze_q.ini
Ideas/: stm32_platIO.c
Ideas/Script/: mcu-fw(--step).sh  mcu-fw(working).sh  script_pre_funcoes.sh
Ideas/interface/: readTimersBck.c
Interface/: dma_gen.c  interface  interface.c  periph_gen  periph_gen.c  peripherals.h  uart_gen.c
Runner/cmake/st/: CMakeLists.txt
Runner/cmake/st/board/: stm32l5xx.cmake
Runner/cmake/stm32/: CMakeLists.txt
Runner/cmake/stm32/board/: stm32f7xx.cmake  stm32l5xx.cmake
Test/stm32/f4_test/: stm32f4xx.cmake
Test/stm32/f7_cc/Results/: STM32F767_ch_matrix.txt  STM32F767_contention_capacity.txt  STM32F767_contention_samples.txt
Test/stm32/f7_cc_meet/: stm32f7xx.cmake
Test/stm32/f7_cc_meet/Results/: STM32F767_ch_matrix.txt  STM32F767_contention_capacity.txt  STM32F767_contention_samples.txt
Test/stm32/f7_test/: CMakeLists.txt  stm32f7xx.cmake
Test/stm32/f7_test/Core/Inc/: peripherals.h
Test/stm32/f7_test/Core/Src/: main.c
Test/stm32/l5_cc_final/Results/: STM32L552_contention_capacity.txt  STM32L552_contention_samples.txt
Test/stm32/l5_cc_ide/Results/: covert_channel.c  covert_channel.h
Test/stm32/l5_ns_s/: CMakeLists.txt
Test/stm32/l5_ns_s/NonSecure/: CMakeLists.txt  STM32L552ZETXQ_FLASH.ld
Test/stm32/l5_tz_folder/: stm32l5xx.cmake
Test/stm32/l5_tz_folder/Secure_nsclib/: secure_nsc.h
Test/stm32/l5_tz_folder_full_work/NonSecure/: CMakeLists.txt
Test/stm32/l5_tz_mem_map/NonSecure/: STM32L552ZETXQ_FLASH.ld
Test/stm32/l5_tz_mtime/NonSecure/: CMakeLists.txt
Test/stm32/l5_tz_mtime/Secure/: CMakeLists.txt
Test/stm32/test_f4/: CMakeLists.txt  stm32f4xx.cmake
Test/stm32/test_l5/: stm32l5xx.cmake
Test/stm32/u5_test/: stm32u5xx.cmake
Test/stm32/uart_f7/: CMakeLists.txt
cmake/: CMakeLists.txt
configs/: stm32f407.json  stm32f767 copy.json  stm32u575zi.json
dev/: flake.nix  stm32_config.json  stm32_f767zi.ini  stm32_l552_config.json
dev/Accurate_trace/: trace_stm32l552.json
dev/interface/: interface.c  jsonBestReadable.c  readTimers.c
docs/: architecture.drawio
docs/check_refine/: dma.html  errors_warnings.html  examples.html  index.html  schema.html  style.css  timers.html
docs/drawio/: .$architecture.drawio.bkp
docs/framework/: cli.html  config_layers.html  covert_channel.html  extensibility.html  index.html  nav.js  outputs.html  pipeline.html  roadmap.html  style.css
docs/framework/check_refine/: dma.html  errors_warnings.html  examples.html  index.html  schema.html  timers.html
erikav3/TIM_Test/: .cproject  .project  conf.oil
erikav3/TIM_Test/Core/Inc/: main.h  tim.h  trace.h
erikav3/TIM_Test/Core/Src/: dma.c  main.c  print.c  stm32f4xx_clock.c  tim.c  trace.c
erikav3/TIM_Test/erika/: osSignature.oil
erikav3/TIM_Test/erika/doc/: Doxyfile
erikav3/Trace_F4/: .cproject  conf.oil
erikav3/Trace_F4/Core/Inc/: tim.h  (+2 more)
erikav3/Trace_F4/des/: des.c  des.h
erikav3/Trace_F4/erika/: makefile  osSignature.oil
erikav3/f4_demo1/: .cproject  .project  code.c  conf.oil  hal.c  print.c  task.c
erikav3/f4_demo1/erika/: osSignature.oil
erikav3/mbedtls-f4/: .cproject  conf.oil
src/analyser/: mr-a-trace.sh
src/analyser/tools/: adv_graph.py  extract_log.py  plot_graph.py  sliding_group.py
src/covert_channel/st/: cc_jinga_sh.py  cc_stm32f407.json  cc_stm32l552.json  covert_channel.c  covert_channel_tmp.j2  main.c
src/covert_channel/tools/: heatmap.py
src/generator/st/aux_files/stm32l5xx/Secure/: CMakeLists.txt
src/generator/st/aux_files/stm32l5xx/Secure/core/inc/: gtzc_s.h  main.h
src/interface/: test_simple.json
src/runner/cmake/st/: CMakeLists.txt
src/runner/cmake/st/board/: stm32u5xx.cmake
src/runner/cmake/st/tz/: CMakeLists.txt
(+974 files in other folders)
